# macrofactor-module

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  railway.json  tsconfig.json
backend/: correlacion.py  main.py  railway.json  requirements.txt
docs/: API.md  ARCHITECTURE.md  DEPLOY.md  DEPLOY_FASE1.md  MATH.md  ROADMAP.md  SCHEMA.md
scripts/: apply_schema.mjs  package.json
src/macrofactor/: __init__.py  coach.py  models.py  tdee_estimator.py  weekly_mvp.py  weight_trend.py
supabase/: config.toml  cron.sql  schema.sql  triggers.sql
supabase/functions/_shared/: barcode.ts  nutrition.ts
supabase/functions/compute_weekly/: index.ts
supabase/functions/ocr_label/: index.ts
supabase/functions/scan_barcode/: index.ts
supabase/migrations/: 0002_comidas.sql
tests/: test_core.py
tests-ts/: barcode.ts  run.ts
web/: next.config.js  package-lock.json  package.json  tailwind.config.ts
web/app/: TrendChart.tsx  globals.css  layout.tsx  page.tsx
web/components/: comida.tsx  dash.tsx  menu.tsx  ui.tsx
web/lib/: coach.ts  food.ts  theme.ts
