[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macrofactor"
version = "0.1.0"
description = "Módulo de nutrición adaptativa inspirado en la lógica de MacroFactor (TDEE dinámico, tendencia de peso, coaching de ingesta)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
test = ["pytest>=7.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
